# copper

./: .gitignore  Capfile  Dockerfile  Gemfile  README.md  docker-compose.yml  generate_keys.rb
algorithms/coocorrencia/: README  coocorrencia.rb  run_coocorrencia.sh
algorithms/correlacoes/: README  run_correlacao.sh
algorithms/part_item/: part_item.rb  run_part_item.sh
algorithms/sentimento/: run_sentiment.sh
algorithms/topicos/: run_topicos.sh
algorithms/wordtree/: AUTHORS  Makefile.am  README.md  configure.ac  run_wordtree.sh
algorithms/wordtree/src/: dendro.c  dendro.h  json.c  json.h  main.c  main.h  node.c  node.h
algorithms/wordtree/tests/: test_dendro.c  test_dendro.h  test_json.c  test_json.h  test_node.c  test_node.h
app/controllers/: application_controller.rb  databases_controller.rb  datasources_controller.rb  jobs_controller.rb  json_controller.rb  passwords_controller.rb  registrations_controller.rb  sessions_controller.rb  users_controller.rb  workflows_controller.rb
app/jobs/: comment_search_job.rb  coocorrencia_job.rb  correlacao_job.rb  extract_comments_job.rb  extract_full_comments_job.rb  extract_wt_comments_job.rb  import_database_job.rb  import_datasource_job.rb  part_item_job.rb  perform_job.rb  save_terms_job.rb  search_job.rb  sentimento_job.rb  text_search_job.rb  topico_job.rb  wordtree_job.rb
app/models/: comment.rb  database.rb  datasource.rb  job.rb  part.rb  user.rb  work.rb
app/serializers/: datasource_serializer.rb  job_serializer.rb  user_serializer.rb
config/: application.rb  boot.rb  cable.yml  deploy.rb  mongoid.yml  puma.rb  routes.rb  secrets.yml
config/deploy/: production.rb  staging.rb
config/environments/: development.rb  docker.rb  production.rb  staging.rb
config/initializers/: cors.rb  devise.rb  error_serializer.rb  session_store.rb
config/locales/: pt-BR.yml
config/unicorn/: production.rb
db/: seeds.rb
dump/ai-social-rails/: comments.bson  comments.metadata.json  databases.bson  databases.metadata.json  parts.bson  parts.metadata.json
dump/ai_social_rails_development/: comments.bson  comments.metadata.json  databases.bson  databases.metadata.json  jobs.metadata.json  parts.bson  parts.metadata.json
frontend/: .eslintrc.js  README.md  bower.json  ember-cli-build.js  package.json
frontend/app/: index.html  (+1 more)
lib/: json_web_token.rb  read_camara_api.rb
(+437 files in other folders)
